add registration page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="et_password_hint">Password</string>
     <string name="registerinfo_tv">Don\'t have an account? register here</string>
     <string name="other_email_login_btn">Log In</string>
+    <string name="registration_title">Registration</string>
+    <string name="first_name">First Name</string>
+    <string name="second_name">Second Name</string>
+    <string name="osrs_account_name">OSRS Account Name</string>
+    <string name="account_name_guidance">If your Runescape name has any spaces please use an _ i.e. Mr_Freaker</string>
+    <string name="submit_registration">Submit</string>
 </resources>
